# Testovatko

./: .gitignore  Cargo.toml  LICENSE  generate.py  main.py  mark.py  pixi.toml  quiz.json  quiz_ans.json  repomix-output.xml  students.json  template.typ  utils.py
.github/workflows/: build_release.yml
assets/: model_download.sh  template.typ
licenses/: LICENSE-ocrs-models
res/: marked_students.json
src/: cli.rs  generator.rs  main.rs  marker.rs  models.rs  utils.rs
src/generator/: compiler.rs  composer.rs  markup.rs  pdf.rs  renderer.rs
src/marker/: detector.rs  grader.rs  ingestor.rs
