[package]
name = "testovatko"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
anyhow = "1.0.102"
rand = "0.10.1"
typst = "0.14.2"
typst-pdf = "0.14.2"
lopdf = "0.40.0"
ureq = "3.3.0"
time = "0.3.47"
zune-inflate = "0.2.54"
tar = "0.4.45"
typst-kit = "0.14.2"
